Created Proper Template Format.

--- a/templates/add_appt.html
+++ b/templates/add_appt.html
@@ -1,3 +1,6 @@
-<html>
-  <h1>This is the add appointment screen</h1>
-</html>
+{% extends "main.html" %}
+{% block content %}
+
+
+
+{% endblock %}
