--- a/templates/public_display.html
+++ b/templates/public_display.html
@@ -1,3 +1,19 @@
-<html>
-    <h1>future list of appointments</h1>
-</html>
+{% extends "main.html" %}
+{% block content %}
+    <h1>Todays Appointments</h1>
+    <div>
+        <table style="width:100%">
+            <tr>
+               <th>First Name</th>
+               <th>Last Name </th>
+               <th>Appointment Time</th>
+            </tr>
+            <tr>
+                <td> Jason </td>
+                <td>Morrissette</td>
+                <td>8:30</td>
+            </tr>
+        </table>
+    </div>
+
+{% endblock %}
